force-app/main/default/objects/Service_Report__c/Service_Report__c.object-meta.xml
<CustomObject>
    <label>Service Call Report</label>
    <nameField>
        <label>Service To</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Call Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>