force-app/main/default/objects/Service_Report__c/fields/AMP_meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>AMP_meter_Reading__c</fullName>
    <label>AMP meter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>