force-app/main/default/objects/Service_Report__c/fields/Aspiration_setting_No__c.field-meta.xml
<CustomField>
    <fullName>Aspiration_setting_No__c</fullName>
    <label>Aspiration setting No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>