force-app/main/default/objects/Service_Report__c/fields/Chain_Coupling_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Chain_Coupling_Alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chain Coupling Alignment</label>
    <type>Checkbox</type>
</CustomField>