force-app/main/default/objects/Service_Report__c/fields/Check_Noise_Vibration__c.field-meta.xml
<CustomField>
    <fullName>Check_Noise_Vibration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Noise &amp; Vibration</label>
    <type>Checkbox</type>
</CustomField>