force-app/main/default/objects/Service_Report__c/fields/Cheque_no__c.field-meta.xml
<CustomField>
    <fullName>Cheque_no__c</fullName>
    <label>Cheque no.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>