force-app/main/default/objects/Service_Report__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <label>Customer Feedback</label>
    <type>TextArea</type>
</CustomField>