force-app/main/default/objects/Service_Report__c/fields/Dated__c.field-meta.xml
<CustomField>
    <fullName>Dated__c</fullName>
    <label>Dated</label>
    <type>Date</type>
</CustomField>