force-app/main/default/objects/Service_Report__c/fields/Day_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Date__c</fullName>
    <label>Day-2-Date</label>
    <type>Date</type>
</CustomField>