force-app/main/default/objects/Service_Report__c/fields/Degree_of_Inclination__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Inclination__c</fullName>
    <label>Degree of Inclination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>