force-app/main/default/objects/Service_Report__c/fields/End_Time_1d__c.field-meta.xml
<CustomField>
    <fullName>End_Time_1d__c</fullName>
    <label>End-Time-1d</label>
    <type>Time</type>
</CustomField>