force-app/main/default/objects/Service_Report__c/fields/Extra_sieve_sizes__c.field-meta.xml
<CustomField>
    <fullName>Extra_sieve_sizes__c</fullName>
    <label>Extra sieve sizes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>