force-app/main/default/objects/Service_Report__c/fields/Height_of_the_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Height_of_the_Elevator__c</fullName>
    <label>Height of the Elevator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>