force-app/main/default/objects/Service_Report__c/fields/Husk_Output__c.field-meta.xml
<CustomField>
    <fullName>Husk_Output__c</fullName>
    <label>Husk Output</label>
    <length>100</length>
    <type>Text</type>
</CustomField>