force-app/main/default/objects/Service_Report__c/fields/Husker_Floppers_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Husker_Floppers_Adjustments__c</fullName>
    <label>Husker Floppers Adjustments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>