force-app/main/default/objects/Service_Report__c/fields/Impeller_Direction__c.field-meta.xml
<CustomField>
    <fullName>Impeller_Direction__c</fullName>
    <label>Impeller Direction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>