force-app/main/default/objects/Service_Report__c/fields/Input_and_Output__c.field-meta.xml
<CustomField>
    <fullName>Input_and_Output__c</fullName>
    <description>Per min.</description>
    <label>Input and Output</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>