force-app/main/default/objects/Service_Report__c/fields/Loses_of_Grain_in_Husk__c.field-meta.xml
<CustomField>
    <fullName>Loses_of_Grain_in_Husk__c</fullName>
    <description>(Tips)</description>
    <label>Loses of Grain in Husk</label>
    <length>100</length>
    <type>Text</type>
</CustomField>