force-app/main/default/objects/Service_Report__c/fields/Machiner_RPM__c.field-meta.xml
<CustomField>
    <fullName>Machiner_RPM__c</fullName>
    <label>Machiner RPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>