force-app/main/default/objects/Service_Report__c/fields/Machinery__c.field-meta.xml
<CustomField>
    <fullName>Machinery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machinery</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipName>Servicer</relationshipName>
    <type>Lookup</type>
</CustomField>