force-app/main/default/objects/Service_Report__c/fields/Machinery_Sl_Nos__c.field-meta.xml
<CustomField>
    <fullName>Machinery_Sl_Nos__c</fullName>
    <label>Machinery Sl. Nos.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>