force-app/main/default/objects/Service_Report__c/fields/Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Mill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Servicer</relationshipName>
    <type>Lookup</type>
</CustomField>