force-app/main/default/objects/Service_Report__c/fields/Name_of_the_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Engineer__c</fullName>
    <label>Name of the Engineer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>