force-app/main/default/objects/Service_Report__c/fields/Nature_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Work__c</fullName>
    <label>Nature Of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Errection</fullName>
            </value>
            <value>
                <fullName>General Visit</fullName>
            </value>
            <value>
                <fullName>Post Warranty</fullName>
            </value>
            <value>
                <fullName>Supervision</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>