force-app/main/default/objects/Service_Report__c/fields/No_of_Kgs_per_Min__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kgs_per_Min__c</fullName>
    <description>(Output)</description>
    <label>No. of Kgs per Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>