force-app/main/default/objects/Service_Report__c/fields/No_of_Kgs_per_Min_for_Length_Grader__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kgs_per_Min_for_Length_Grader__c</fullName>
    <label>No. of Kgs per Min for Length Grader</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>