force-app/main/default/objects/Service_Report__c/fields/No_of_Kgs_per_min_for_Sifter__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kgs_per_min_for_Sifter__c</fullName>
    <description>Output</description>
    <label>No. of Kgs per min for Sifter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>