force-app/main/default/objects/Service_Report__c/fields/No_of_Kgs_per_min_for_Whitener__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kgs_per_min_for_Whitener__c</fullName>
    <inlineHelpText>Output</inlineHelpText>
    <label>No of Kgs per min for Whitener</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>