force-app/main/default/objects/Service_Report__c/fields/No_of_Kgs_per_Min_Output__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kgs_per_Min_Output__c</fullName>
    <label>No. of Kgs per Min(Output)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>