force-app/main/default/objects/Service_Report__c/fields/Number_of_Airlocks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Airlocks__c</fullName>
    <description>Airlock 1   Airlock 2    Airlock 3</description>
    <label>Number of Airlocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>