force-app/main/default/objects/Service_Report__c/fields/Number_of_Blowers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blowers__c</fullName>
    <label>Number of Blowers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>