force-app/main/default/objects/Service_Report__c/fields/Percent_of_Damper_Checking_No__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Damper_Checking_No__c</fullName>
    <label>Percent of Damper Checking No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>