force-app/main/default/objects/Service_Report__c/fields/Percent_of_Dust_Input_or_Output__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Dust_Input_or_Output__c</fullName>
    <label>Percent of Dust Input or Output</label>
    <length>100</length>
    <type>Text</type>
</CustomField>