force-app/main/default/objects/Service_Report__c/fields/Percent_of_Immature__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Immature__c</fullName>
    <label>Percent of Immature Input or Output</label>
    <length>100</length>
    <type>Text</type>
</CustomField>