force-app/main/default/objects/Service_Report__c/fields/Percent_of_Impurity__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Impurity__c</fullName>
    <description>Input / Output</description>
    <label>Percent of Impurity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>