force-app/main/default/objects/Service_Report__c/fields/Percent_of_Shelling__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Shelling__c</fullName>
    <label>Percent of Shelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>