force-app/main/default/objects/Service_Report__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <label>Pin Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>