force-app/main/default/objects/Service_Report__c/fields/Pitch_of_the_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pitch_of_the_Bucket__c</fullName>
    <label>Pitch of the Bucket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>