force-app/main/default/objects/Service_Report__c/fields/Pressure_Gauge_Reading__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Gauge_Reading__c</fullName>
    <label>Pressure Gauge Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>