force-app/main/default/objects/Service_Report__c/fields/RPM_of_Machine__c.field-meta.xml
<CustomField>
    <fullName>RPM_of_Machine__c</fullName>
    <label>RPM of Machine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>