force-app/main/default/objects/Service_Report__c/fields/Sample_collection_for_Sifter__c.field-meta.xml
<CustomField>
    <fullName>Sample_collection_for_Sifter__c</fullName>
    <description>Input / Output</description>
    <label>Sample collection for Sifter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>