force-app/main/default/objects/Service_Report__c/fields/Sample_Collection_for_Silky_Polisher__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_for_Silky_Polisher__c</fullName>
    <label>Sample Collection for Silky Polisher</label>
    <length>100</length>
    <type>Text</type>
</CustomField>