force-app/main/default/objects/Service_Report__c/fields/Sample_Collection_for_Whitener__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_for_Whitener__c</fullName>
    <description>Input / Output</description>
    <label>Sample Collection for Whitener</label>
    <length>100</length>
    <type>Text</type>
</CustomField>