force-app/main/default/objects/Service_Report__c/fields/Samples_collection_for_Length_Grader__c.field-meta.xml
<CustomField>
    <fullName>Samples_collection_for_Length_Grader__c</fullName>
    <description>Input / Output</description>
    <label>Samples collection for Length Grader</label>
    <length>100</length>
    <type>Text</type>
</CustomField>