force-app/main/default/objects/Service_Report__c/fields/Samples_Collection_for_Paddy_Seperator__c.field-meta.xml
<CustomField>
    <fullName>Samples_Collection_for_Paddy_Seperator__c</fullName>
    <label>Samples Collection for Paddy Seperator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>