force-app/main/default/objects/Service_Report__c/fields/Samples_Collection_for_Vibro_Destoner__c.field-meta.xml
<CustomField>
    <fullName>Samples_Collection_for_Vibro_Destoner__c</fullName>
    <description>Input / Output</description>
    <label>Samples Collection for Vibro Destoner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>