force-app/main/default/objects/Service_Report__c/fields/Samples_collection_from_conveyor__c.field-meta.xml
<CustomField>
    <fullName>Samples_collection_from_conveyor__c</fullName>
    <label>Samples collection from conveyor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>