force-app/main/default/objects/Service_Report__c/fields/Samples_Collection_Input_or_Output__c.field-meta.xml
<CustomField>
    <fullName>Samples_Collection_Input_or_Output__c</fullName>
    <label>Samples Collection Input or Output</label>
    <length>100</length>
    <type>Text</type>
</CustomField>