force-app/main/default/objects/Service_Report__c/fields/Samples_of_Husk_Immature__c.field-meta.xml
<CustomField>
    <fullName>Samples_of_Husk_Immature__c</fullName>
    <label>Samples of Husk, Immature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>