force-app/main/default/objects/Service_Report__c/fields/Service_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Amount__c</fullName>
    <label>Service Charge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>