force-app/main/default/objects/Service_Report__c/fields/Service_Engineer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer_Remarks__c</fullName>
    <label>Service Engineer Remarks</label>
    <type>TextArea</type>
</CustomField>