force-app/main/default/objects/Service_Report__c/fields/Service_Performed_or_Commssioning_Report__c.field-meta.xml
<CustomField>
    <fullName>Service_Performed_or_Commssioning_Report__c</fullName>
    <label>Service Performed or Commssioning Report</label>
    <length>200</length>
    <type>Text</type>
</CustomField>