force-app/main/default/objects/Service_Report__c/fields/Spares_Others_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spares_Others_Amount__c</fullName>
    <label>Spares / Others Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>