force-app/main/default/objects/Service_Report__c/fields/Start_Time_1d__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_1d__c</fullName>
    <label>Start Time-1d</label>
    <type>Time</type>
</CustomField>