force-app/main/default/objects/Service_Report__c/fields/Start_Time_2d__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_2d__c</fullName>
    <label>Start Time-2d</label>
    <type>Time</type>
</CustomField>