force-app/main/default/objects/Service_Report__c/fields/Start_Time_3d__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_3d__c</fullName>
    <label>Start Time-3d</label>
    <type>Time</type>
</CustomField>