force-app/main/default/objects/Service_Report__c/fields/Stone_Grit__c.field-meta.xml
<CustomField>
    <fullName>Stone_Grit__c</fullName>
    <description>1 pass/ 2 pass/3 pass</description>
    <label>Stone Grit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>