force-app/main/default/objects/Service_Report__c/fields/Through_put_of_machine_for_S_H__c.field-meta.xml
<CustomField>
    <fullName>Through_put_of_machine_for_S_H__c</fullName>
    <description>Per hour</description>
    <label>Through put of machine for S/H</label>
    <length>100</length>
    <type>Text</type>
</CustomField>