force-app/main/default/objects/Service_Report__c/fields/Through_put_of_the_machine_per_hr__c.field-meta.xml
<CustomField>
    <fullName>Through_put_of_the_machine_per_hr__c</fullName>
    <label>Through put of the machine per hr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>