force-app/main/default/objects/Service_Report__c/fields/To_and_Fro_and_Conveyance_Charges__c.field-meta.xml
<CustomField>
    <fullName>To_and_Fro_and_Conveyance_Charges__c</fullName>
    <label>To and Fro and Conveyance Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>