force-app/main/default/objects/Service_Report__c/fields/Total_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Days__c</fullName>
    <label>Total No. of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>