force-app/main/default/objects/Service_Report__c/fields/Type_of_Rice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rice__c</fullName>
    <label>Type of Rice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>