force-app/main/default/objects/Service_Report__c/fields/Using_Sieve_sizes_of_the_machine__c.field-meta.xml
<CustomField>
    <fullName>Using_Sieve_sizes_of_the_machine__c</fullName>
    <label>Using Sieve sizes of the machine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>