force-app/main/default/objects/Service_Report__c/fields/Variety_of_Rice__c.field-meta.xml
<CustomField>
    <fullName>Variety_of_Rice__c</fullName>
    <description>Size</description>
    <label>Variety of Rice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>