force-app/main/default/objects/Service_Report__c/fields/Variety_of_Rice_Sieve_SIze__c.field-meta.xml
<CustomField>
    <fullName>Variety_of_Rice_Sieve_SIze__c</fullName>
    <label>Variety of Rice / Sieve Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>