force-app/main/default/objects/Service_Report__c/fields/Vibro_Scale_Reading__c.field-meta.xml
<CustomField>
    <fullName>Vibro_Scale_Reading__c</fullName>
    <label>Vibro Scale Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>