force-app/main/default/objects/Service_Report__c/fields/Vol_of_Air_Utilization_for_Blowers__c.field-meta.xml
<CustomField>
    <fullName>Vol_of_Air_Utilization_for_Blowers__c</fullName>
    <description>(Percent)</description>
    <label>Vol of Air Utilization for Blowers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>