force-app/main/default/objects/Service_Report__c/fields/Vol_of_air_Utilization_for_VD__c.field-meta.xml
<CustomField>
    <fullName>Vol_of_air_Utilization_for_VD__c</fullName>
    <label>Vol. of air Utilization for VD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>