force-app/main/default/objects/Service_Report__c/fields/Volume_of_Air_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Air_Utilization__c</fullName>
    <label>Volume of Air Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>