force-app/main/default/objects/Service_Report__c/fields/Water_Pump_Pressure_Reading__c.field-meta.xml
<CustomField>
    <fullName>Water_Pump_Pressure_Reading__c</fullName>
    <label>Water Pump Pressure Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>