force-app/main/default/objects/Service_Report__c/fields/Work_Order_for_Spares__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_for_Spares__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order for Spares</label>
    <referenceTo>Work_Order_for_Spares__c</referenceTo>
    <relationshipLabel>Service Call Report</relationshipLabel>
    <relationshipName>Service_Call_Report</relationshipName>
    <type>Lookup</type>
</CustomField>