force-app/main/default/objects/Service_Report__c/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <defaultValue>&quot;10.After acceptance of the quotation, the customer should deposit the amount in the bank, then only, the spares will be dispatched.&quot;</defaultValue>
    <label>10.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>