force-app/main/default/objects/Service_Report__c/fields/X11__c.field-meta.xml
<CustomField>
    <fullName>X11__c</fullName>
    <defaultValue>&quot;11.There is no Warranty for Bearings, Fasteners, Electrical, Electronic items and China made Machines or spares.&quot;</defaultValue>
    <label>11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>