force-app/main/default/objects/Service_Report__c/fields/X12__c.field-meta.xml
<CustomField>
    <fullName>X12__c</fullName>
    <defaultValue>&quot;12.Replacement of Spares which are giiven in free of cost should be return to the Company for further Research &amp; Development Purpose (if not returned the amount will be charged in warranty period).&quot;</defaultValue>
    <label>12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>