force-app/main/default/objects/Service_Report__c/fields/Year_Of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Manufacture__c</fullName>
    <label>Year Of Manufacture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>