force-app/main/default/objects/Service_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mill_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>